TEIIDTOOLS-100: Fixes pf-filter layout issue
* Using patternfly 3.6.0 which has different layout arangement for pf-filter
  to latest (3.18.1). As such this appears to be an issue with the pf-filter
  directive itself.

* Workaround fix by inserting style into main app css, which declares the
  pf-filter components should be display in a table as both components have
  a display setting of table-cell already.

--- a/vdb-bench-assembly/app/content/css/styles.less
+++ b/vdb-bench-assembly/app/content/css/styles.less
@@ -176,8 +176,20 @@ html, body {
     font-weight: bold;
 }
 
+/*
+ * Fixes off-centred placement of loading spinners by
+ * mandating they be located on the left of the cell
+ */
 .spinner {
     margin-left: 1em !important;
+}
+
+/*
+ * Fixes problem with patternfly 3.6.0 where the pf-filter
+ * input box appears beneath its partner dropdown control.
+ */
+.filter-pf .input-group {
+    display: table;
 }
 
 .repo-config-page-slide-container {
